--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
-    "com.unity.adaptiveperformance": "3.0.2",
+    "com.madsbangh.easybuttons": "1.3.0",
+    "com.unity.adaptiveperformance": "4.0.0",
     "com.unity.adaptiveperformance.samsung.android": "4.0.0",
     "com.unity.feature.2d": "1.0.0",
     "com.unity.feature.mobile": "1.0.0",
-    "com.unity.ide.visualstudio": "2.0.15",
+    "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
@@ -39,5 +40,15 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "package.openupm.com",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.madsbangh.easybuttons",
+        "com.openupm"
+      ]
+    }
+  ]
 }
