--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
     "com.madsbangh.easybuttons": "1.3.0",
-    "com.unity.adaptiveperformance": "4.0.1",
-    "com.unity.adaptiveperformance.samsung.android": "4.0.2",
-    "com.unity.ai.navigation": "1.1.1",
-    "com.unity.feature.2d": "1.0.0",
+    "com.unity.adaptiveperformance": "5.1.0",
+    "com.unity.adaptiveperformance.samsung.android": "5.0.0",
+    "com.unity.ai.navigation": "2.0.4",
+    "com.unity.feature.2d": "2.0.1",
     "com.unity.feature.mobile": "1.0.0",
-    "com.unity.ide.visualstudio": "2.0.17",
-    "com.unity.test-framework": "1.1.33",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.test-framework": "1.4.5",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
